--- a/views/templates/partials/sidebarNav.twig
+++ b/views/templates/partials/sidebarNav.twig
@@ -51,9 +51,9 @@
                 </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="#">Article List List</a></li>
-                <li><a href="#">Create Article</a></li>
-                <li><a href="#">Trash</a></li>
+                <li><a href="{{ path_for('article-add') }}">Article add</a></li>
+                <li><a href="{{ path_for('article-list-active') }}">Article List Active</a></li>
+                <li><a href="{{ path_for('article-list-inactive') }}">Article List In-Active</a></li>
             </ul>
         </li>
         <li class="treeview">
