add feature article

--- a/views/admin/article/article-add.twig
+++ b/views/admin/article/article-add.twig
@@ -1,9 +1,9 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %} RA | Reporting - App {% endblock %}
+{% block title %} Article | Add {% endblock %}
 
 {% block headContent %} 
-	Add Article <i style="color:green" class="fa fa-plus-square "></i>
+	<i class="fa fa-plus" aria-hidden="true"></i> Add Article 
 {% endblock %}
 
 {% block content %}
