--- a/views/admin/article/article-edit.twig
+++ b/views/admin/article/article-edit.twig
@@ -1,9 +1,9 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %} RA | Reporting - App {% endblock %}
+{% block title %} Article | Edit {% endblock %}
 
 {% block headContent %} 
-    Edit Article <i style="color:green" class="fa fa-check-square-o"></i>
+   <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit Article 
 {% endblock %}
 
 {% block content %}
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="box-footer">
-                <button type="submit" class="btn btn-primary center-block">Submit</button>
+                <button type="submit" class="btn btn-primary center-block"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Submit</button>
             </div>
         </form>
     </div>
