--- a/views/admin/article/article-list-inactive.twig
+++ b/views/admin/article/article-list-inactive.twig
@@ -1,9 +1,9 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %} RA | Reporting - App {% endblock %}
+{% block title %} Article | List In - Active {% endblock %}
 
 {% block headContent %} 
-	In-Active Article <i style="color:green" class="fa fa-check-square-o"></i>
+	<i class="fa fa-list" aria-hidden="true"></i> In-Active Article 
 {% endblock %}
 
 {% block content %}
@@ -17,18 +17,18 @@
 						<thead>
 							<tr>
 								<th style="width: 40px">Delete</th>
+								<th>Image</th>
 								<th>Title</th>
 								<th>Content</th>
-								<th>Image</th>
 								<th style="width: 40px">Restore</th>
 							</tr>
 						</thead>
 						{% for article in article %}
 						<tr>
 							<td class="text-center"><input type="checkbox" name="article[]" value="{{ article.id }}"></td>
+							<td><img src="{{ base_url() }}/assets/images/{{ article.image }}" width="100" height="100"></td>
 							<td>{{ article.title }}</td>
 							<td>{{ article.content|slice(0, 200) }}</td>
-							<td><img src="{{ base_url() }}/assets/images/{{ article.image }}" width="100" height="100"></td>
 							<td class="text-center"><a href="{{ path_for('article-restore', { ('id'):article.id }) }}"><i class="fa fa-refresh"></i></a></td>
 						</tr>
 						{% endfor %}
@@ -36,7 +36,7 @@
 					<hr style="margin-top:10px;margin-bottom:10px;" >
 				</div>
 				<div class="panel-body" align="right">
-					<button type="submit" name="active"  class="btn btn-danger"><i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>Delete permanent</button>
+					<button type="submit" name="active"  class="btn btn-danger"><i class="fa fa-trash-o fa-lg" aria-hidden="true"></i> Delete permanent</button>
 					<hr style="margin-top:10px;margin-bottom:10px;" >
 				</form>
 			</div>
