--- a/views/templates/partials/flash.twig
+++ b/views/templates/partials/flash.twig
@@ -1,8 +1,8 @@
 {% if flash.getMessage('info') %}
 
-	<div class="alert alert-info alert-dismissible" role="alert">
+	<center><div class="alert alert-info alert-dismissible" role="alert">
 	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  <span class="glyphicon glyphicon-bell"></span><strong> Info ! </strong> <i>Data should not be empty</i>
+	  <span class="glyphicon glyphicon-bell"></span><strong> Info ! </strong> <i>Data should not be empty</i> <span class="glyphicon glyphicon-bell"></center>
 
 </strong>
 		{{ flash.getMessage('info') | first }}
@@ -16,33 +16,33 @@
 
 {% if flash.getMessage('error') %}
 
-	<div class="alert alert-danger alert-dismissible" role="alert">
+	<center><div class="alert alert-danger alert-dismissible" role="alert">
 	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	  <strong><span class="glyphicon glyphicon-remove"></span>
 		{{ flash.getMessage('error') | first }}
-		
+		<span class="glyphicon glyphicon-remove"></span>
 	  </strong> 
 	</div>
+	</center>
 {% endif %}
 
 {% if flash.getMessage('warning') %}
 
-	<div class="alert alert-warning alert-dismissible" role="alert">
+	<center> <div class="alert alert-warning alert-dismissible" role="alert">
 	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	  <strong><span class="glyphicon glyphicon-warning-sign"></span><strong> Error ! 
 		{{ flash.getMessage('warning') | first }}
-		
-	  </strong> 
-	</div>
+	</div></center>
 {% endif %}
 
 {% if flash.getMessage('succes') %}
 
-	<div class="alert alert-success alert-dismissible" role="alert">
+	<center><div class="alert alert-success alert-dismissible" role="alert">
 	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  <strong><span class="glyphicon glyphicon-check"></span>
-		{{ flash.getMessage('succes') | first }}
-		
+	  <strong><span class="glyphicon glyphicon-check"></span></strong>
+		{{ flash.getMessage('succes') | first }} 
+
+	<strong><span class="glyphicon glyphicon-check">
 	  </strong> 
 	</div>
 {% endif %}
