--- a/views/users/add.twig
+++ b/views/users/add.twig
@@ -71,7 +71,12 @@
                         <div class="input-group-addon">
                             <i class="fa fa-transgender-alt"></i>
                         </div>
-                        <input type="text" name="gender" value="{{old.gender}}" class="form-control" placeholder="Your gender">
+
+                        <select name="gender" class="form-control" id="">
+                            <option value="">Select Gender</option>
+                            <option value="Laki-Laki">Laki-Laki</option>
+                            <option value="Perempuan">Perempuan</option>
+                        </select>
                     </div>
                     {% if errors.gender %}
                         <span class="help-block">
@@ -104,7 +109,6 @@
                         <span class="help-block">{{errors.address | first}}</span>
                     {% endif %}                                
                 </div>
-    
                 <div class="form-group {{ errors.image ? 'has-error' : '' }}">
                     <label>Image :</label>
                     <div class="input-group">
