--- a/views/users/edit.twig
+++ b/views/users/edit.twig
@@ -1,7 +1,9 @@
 {% extends 'templates/default.twig' %}
 
 {% block title %} Updata User {% endblock %}
-{% block headContent %} Update User <a href=""><i class="fa fa-plus"></i></a> {% endblock %}       
+{% block headContent %} Update User <a href=""><i class="fa fa-pencil-square"></i></a> <br /> 
+    <a href="{{path_for('user.list.all')}}"><button type="submit" class="btn btn-default" style="margin:10px"><i class="fa fa-undo"></i> Back</button></a>
+{% endblock %}       
 
 {% block content %}
   <form action="{{ path_for('user.edit.data', {id:data.id} ) }}" method="POST" enctype="multipart/form-data">
@@ -72,7 +74,11 @@
                         <div class="input-group-addon">
                             <i class="fa fa-transgender-alt"></i>
                         </div>
-                        <input type="text" name="gender" value="{{data.gender}}" class="form-control" placeholder="Your gender">
+                        <!-- <input type="text" name="gender" value="{{data.gender}}" class="form-control" placeholder="Your gender"> -->
+                        <select name="gender" class="form-control" id="">
+                            <option value="{{data.gender}}">{{data.gender}}</option>
+                            <option value="{{data.gender}}">{{data.gender}}</option>
+                        </select>
                     </div>
                     {% if errors.gender %}
                         <span class="help-block">
@@ -113,7 +119,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-image"></i>
                         </div>
-                        <input type="file" class="form-control" name="image" id="image" placeholder="Your image">
+                        <input type="file" class="form-control" name="image" id="image" value="{{data.image}}" placeholder="Your image">
                     </div>
                     {% if errors.image %}
                         <span class="help-block">{{errors.image | first}}</span>
