--- a/views/templates/partials/headerNav.twig
+++ b/views/templates/partials/headerNav.twig
@@ -9,12 +9,12 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-                {% if user %}
+                {% if login %}
                 <li class="dropdown user user-menu">
 
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
              {# <i class="fa fa-user"></i> #}<img src="http://koolkampus.co.in/wp-content/uploads/2014/02/admin.png" class="user-image" alt="User Image">
-              <span class="hidden-xs">{{user.name}}</span>
+              <span class="hidden-xs">{{login.name}}</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
@@ -22,8 +22,8 @@
                 <img src="http://koolkampus.co.in/wp-content/uploads/2014/02/admin.png" class="img-circle" alt="User Image">
 
                 <p>
-                  {{user.name}} - Admin Point Of Sale
-                  <small>Admin since Maret. 2016</small>
+                  {{login.name}}
+                  <small>Join since {{ login.created_at}}</small>
                 </p>
               </li>
               <!-- Menu Body -->
