--- a/views/templates/default.twig
+++ b/views/templates/default.twig
@@ -21,7 +21,7 @@
 
     <title>{% block title %} {% endblock %}</title>
 </head>
-<body class="hold-transition skin-blue sidebar-mini" style="background:url('https://s-media-cache-ak0.pinimg.com/originals/3c/ff/1d/3cff1dde8cb69d8c208c1fb768f75e0a.jpg')">
+<body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
 
         <!-- Header Navigation -->
