--- a/views/templates/partials/flash.twig
+++ b/views/templates/partials/flash.twig
@@ -32,6 +32,7 @@
 	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	  <strong><span class="glyphicon glyphicon-warning-sign"></span><strong> Error ! 
 		{{ flash.getMessage('warning') | first }}
+		</strong></strong>
 	</div></center>
 {% endif %}
 
