--- a/views/users/edit.twig
+++ b/views/users/edit.twig
@@ -60,7 +60,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-lock"></i>
                         </div>
-                        <input type="password" value="" name="password" class="form-control" placeholder="Your Password">
+                        <input type="password" name="password" class="form-control" placeholder="New Password">
                     </div>
                     {% if errors.password %}
                         <span class="help-block">
