--- a/views/templates/partials/sidebarNav.twig
+++ b/views/templates/partials/sidebarNav.twig
@@ -1,11 +1,11 @@
 <section class="sidebar">
     <div class="user-panel">
         <div class="pull-left image">
-            <img src="http://www.istackcrm.in/media/1425/advance-reporting.png" class="img-circle" alt="User Image">
+            <img src="{{ base_url() }}/assets/images/{{ login.image }}" class="img-circle" alt="User Image">
         </div>
 
         <div class="pull-left info">
-            <p>{{user.name}}</p>
+            <p>{{login.name}}</p>
             <a href="#"><i class="fa fa-circle text-success"></i> Online
             </a>
         </div>
@@ -91,7 +91,7 @@
         {% endif %}
 
         <li>
-         <a href="#"><i class="fa fa-power-off"></i>
+         <a href="{{ path_for('logout')}}"><i class="fa fa-power-off"></i>
             <span>LOGOUT</span></a>
         </li>
 
