add timeline pagination and correcting folder directory

--- a/views/admin/group/not-member.twig
+++ b/views/admin/group/not-member.twig
@@ -1,9 +1,9 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %} Group | All Users {% endblock %}
+{% block title %} Group | All Members {% endblock %}
 
 {% block headContent %}
-	All Users<i style="color:green" class="fa fa-check-square-o"></i>
+	All Members  <i style="color:green" class="fa fa-check-square-o"></i>
 {% endblock %}
 
 {% block content %}
