--- a/views/admin/article/article-read.twig
+++ b/views/admin/article/article-read.twig
@@ -10,8 +10,7 @@
 <div class="container">
 <div class="col-md-8 col-md-offset-1">
 	<div class="card">
-	  <img class="card-img-top" src="{{ base_url() }}/assets/images/{{ article.image }}" width="200" height="300"  alt="Lights" style="width:100%" alt="Card image cap">
->>>>>>> afri/web
+	  <img class="card-img-top" src="{{ base_url() }}/assets/images/{{ article.image }}" width="200" height="300">
 	  <div class="card-block">
 	    <h4 class="media-heading"> {{ article.title }} </h4>
 		<p class="fa fa-calendar"> {{ article.created_at|date('d/m/Y') }} </p>
