--- a/views/admin/article/timeline.twig
+++ b/views/admin/article/timeline.twig
@@ -1,16 +1,25 @@
-{% for article in article %}
-    <div class="container">
-		<div class="col-md-8 col-md-offset-1">
-			<div class="card">
-			  <img class="card-img-top" src="{{ base_url() }}/assets/images/{{ article.image }}" width="200" height="300"  alt="Lights" style="width:100%" alt="Card image cap">
-			  <div class="card-block">
-			    <h4 class="media-heading">{{ article.title }}</h4>
-				<p class="fa fa-calendar"> {{ article.created_at|date('d/m/Y') }} </p>
-				<p class="fa fa-clock-o"> {{ article.created_at|date("H:m") }} </p>
-				<p class="text-justify">{{ article.content|slice(0, 300) }} <a href="{{ path_for('article-read', { id:article.id }) }}">Readmore...</a></p>
-			  </div>
-			</div>
-		</div>
-	</div>
-	<br>
-{% endfor %}
+<div class="container">
+    <div class="col-md-8 col-md-offset-1">
+        <div class="card">
+            {% for article in data %}
+            <img class="card-img-top" src="{{ base_url() }}/assets/images/{{ article.image }}" width="200" height="300"  alt="Lights" style="width:100%" alt="Card image cap">
+            <div class="card-block">
+                <h4 class="media-heading">{{ article.title }}</h4>
+                <p class="fa fa-calendar"> {{ article.created_at|date('d/m/Y') }} </p>
+                <p class="fa fa-clock-o"> {{ article.created_at|date("H:m") }} </p>
+                <p class="text-justify">{{ article.content|slice(0, 300) }} <a href="{{ path_for('article-read', { id:article.id }) }}">Readmore...</a></p>
+                {% endfor %}
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            {% if current > 1 %}
+            <p> <a href="{{ base_url() }}/home?page={{ current - 1 }}">Back</a></p>
+            {% endif %}
+            {% if current < total_page %}
+            <p> <a href="{{ base_url() }}/home?page={{ current + 1 }}">Next</a></p>
+            <p> <a href="{{ base_url() }}/home?page={{ total_page }}">Last page</a></p>
+            {% endif %}
+        </div>
+    </div>
+</div>
