--- a/views/admin/item/allitem.twig
+++ b/views/admin/item/allitem.twig
@@ -12,7 +12,7 @@
     <div class="col-xs-12">
         <div class="panel panel-default">
             <div class="panel-body">
-                <form action="{{ path_for('index') }}" method="post">
+                <form action="{{ path_for('item.list') }}" method="post">
 
                     <table id="example2" class="table table-bordered table-striped ">
                         <thead>
