--- a/views/templates/dashboard.twig
+++ b/views/templates/dashboard.twig
@@ -1,16 +1,34 @@
 <div class="row">
     <div class="col-lg-3 col-xs-6">
-        <div class="small-box bg-aqua">
+        <div class="small-box bg-blue">
             <div class="inner">
-                <h3>{{ counts.group + counts.inact_group }}</h3>
-                <p><b>Groups</p>
+                <h3>{{ counts.group +  counts.inact_group}}</h3>
+                    <!-- <sup style="font-size: 20px">%</sup> -->
+                <p><b>Groups</b></p>
                 <p>{{ counts.group }} <i>Active</i></p>
                 <p>{{ counts.inact_group }} <i>Inactive</i></p>
             </div>
             <div class="icon">
                 <i class="icon ion-ios-people"></i>
             </div>
-            <a href="#" class="small-box-footer">
+            <a href="{{path_for('group.list')}}" class="small-box-footer">
+                More info <i class="fa fa-arrow-circle-right"></i>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-xs-6">
+        <div class="small-box bg-aqua">
+            <div class="inner">
+                <h3>{{ counts.user + counts.inact_user }}</h3>
+                <p><b>Users</b></p>
+                <p>{{ counts.user }} <i>Active</i></p>
+                <p>{{ counts.inact_user }} <i>Inactive</i></p>
+            </div>
+            <div class="icon">
+                <i class="icon ion-android-person"></i>
+            </div>
+            <a href="{{path_for('user.list.all')}}" class="small-box-footer">
                 More info <i class="fa fa-arrow-circle-right"></i>
             </a>
         </div>
@@ -28,7 +46,7 @@
             <div class="icon">
                 <i class="icon ion-ios-paper-outline"></i>
             </div>
-            <a href="#" class="small-box-footer">
+            <a href="{{ path_for('article-list-active') }}" class="small-box-footer">
                 More info <i class="fa fa-arrow-circle-right"></i>
             </a>
         </div>
@@ -45,28 +63,13 @@
             <div class="icon">
                 <i class="icon ion-clipboard"></i>
             </div>
-            <a href="#" class="small-box-footer">
+            <a href="{{ path_for('item.list') }}" class="small-box-footer">
                 More info <i class="fa fa-arrow-circle-right"></i>
             </a>
         </div>
     </div>
 
-    <div class="col-lg-3 col-xs-6">
-        <div class="small-box bg-red">
-            <div class="inner">
-                <h3>{{ counts.user + counts.inact_user }}</h3>
-                <p><b>Users</b></p>
-                <p>{{ counts.user }} <i>Active</i></p>
-                <p>{{ counts.inact_user }} <i>Inactive</i></p>
-            </div>
-            <div class="icon">
-                <i class="icon ion-android-person"></i>
-            </div>
-            <a href="#" class="small-box-footer">
-                More info <i class="fa fa-arrow-circle-right"></i>
-            </a>
-        </div>
-    </div>
+
 </div>
 
 <!-- <div class="row">
