--- a/views/templates/partials/sidebarNav.twig
+++ b/views/templates/partials/sidebarNav.twig
@@ -66,7 +66,7 @@
                 </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="{{ path_for('index')}}">Item List</a></li>
+                <li><a href="{{ path_for('item.list')}}">Item List</a></li>
                 <li><a href="{{ path_for('item.add')}}">Create Item</a></li>
                 <li><a href="{{ path_for('item.trash')}}">Trash</a></li>
             </ul>
@@ -83,7 +83,7 @@
             </a>
             <ul class="treeview-menu">
                 {% for user_group in user_group %}
-                <li><a href="{{ base_url() }}user/group/{{ user_group.id }}">{{user_group.name}}</a></li>
+                <li><a href="{{ base_url() }}/user/group/{{ user_group.id }}">{{user_group.name}}</a></li>
                 {% endfor %}
             </ul>
         </li>
