view user and login admin

--- a/views/dashboard/dashboard.twig
+++ b/views/dashboard/dashboard.twig
@@ -3,8 +3,9 @@
         <div class="small-box bg-aqua">
             <div class="inner">
                 <h3>{{ counts.group + counts.inact_group }}</h3>
-                <p><b>Groups</p>
-                <p>{{ counts.group }} <i>Active</i></p>
+                    <!-- <sup style="font-size: 20px">%</sup> -->
+                <p><b>Groups</b></p>
+                <p>{{ counts.group }}  <i>Active</i></p>
                 <p>{{ counts.inact_group }} <i>Inactive</i></p>
             </div>
             <div class="icon">
