--- a/views/admin/article/article-add.twig
+++ b/views/admin/article/article-add.twig
@@ -24,8 +24,9 @@
                     {% endif %}
                 </div>
 				<div class="form-group {{ errors.image ? 'has-error' : '' }}">
+                <div id="image_preview"><img id="previewing" src="{{ base_url() }}/assets/images/{{ login.image }}" class="img-thumbnail" style="width:200px" ></div><br />
 					<label for="image">Image</label>
-					<input type="file" name="image" id="image" class="form-control">
+					<input type="file" id="file" name="image" id="image" class="form-control">
 					{% if errors.image %}
 					<span class="help-block">{{errors.image | first}}</span>
 					{% endif %}
