createuser item in group

--- a/views/templates/default.twig
+++ b/views/templates/default.twig
@@ -79,6 +79,20 @@ $(function () {
     });
   });
 </script>
+<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap4.min.js"></script>
+<script>
+$(function () {
+    $('table.example2').DataTable({
+    	"paging": true,
+    	"lengthChange": true,
+     	"searching": true,
+      	"ordering": true,
+      	"info": true,
+      	"autoWidth": true
+    });
+  });
+</script>
 
 {% block script %} {% endblock %}
 </html>
