--- a/views/admin/group/member.twig
+++ b/views/admin/group/member.twig
@@ -50,9 +50,13 @@
 				</div>
 				<div class="panel-body" align="right">
 					<input type="hidden" name="id" value="{{ group_id }}">
+
+					{% if (login.is_admin == 1) %}
 					<button type="submit" name="guard" value="2" class="btn btn-warning"><i class="fa fa-user-circle fa-lg" aria-hidden="true"></i> Set as Guardian</button>
 					<button type="submit" name="member" value="1" class="btn btn-success"><i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i> Set as Member</button>
 					<button type="submit" name="pic" value="3" class="btn btn-primary"><i class="fa fa-user-plus fa-lg" aria-hidden="true"></i> Set as PIC</button>
+					{% endif %}
+
 					<button type="submit" name="delete" value="4" class="btn btn-danger"><i class="fa fa-user-times fa-lg" aria-hidden="true"></i> Delete</button>
 					<hr style="margin-top:10px;margin-bottom:10px;" >
 				</form>
