--- a/views/users/setting.twig
+++ b/views/users/setting.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/default.twig' %}
 {% block title %}Setting Account{% endblock %}
 {% block content %}
-    
+
 <div class="panel-body">
     <div class="box box-info">
         <a href="#"><h4 class="text-center">&nbsp;&nbsp;&nbsp;Setting account</h4></a>
@@ -24,7 +24,7 @@
                             <i class="fa fa-users"></i>
                         </div>
                         <input type="text" name="username" class="form-control" value="{{ login.username }}" placeholder="Your Username">
-                    </div>  
+                    </div>
                     {% if errors.username %}
                         <span class="help-block">
                             {{errors.username | first}}</span>
@@ -41,7 +41,7 @@
                     </div>
                     {% if errors.name %}
                         <span class="help-block">{{errors.name | first}}</span>
-                    {% endif %}                                
+                    {% endif %}
                 </div>
 
                  <div class="form-group {{ errors.gender ? 'has-error' : '' }}">
@@ -59,7 +59,7 @@
                     {% if errors.gender %}
                         <span class="help-block">
                             {{errors.gender | first}}</span>
-                    {% endif %}                 
+                    {% endif %}
                 </div>
 
                  <div class="form-group {{ errors.address ? 'has-error' : '' }}">
@@ -72,7 +72,7 @@
                     </div>
                     {% if errors.address %}
                         <span class="help-block">{{errors.address | first}}</span>
-                    {% endif %}                                
+                    {% endif %}
                 </div>
                   <span class="label label-info">Note : *Password Jangan Diisi Bila Tidak Ingin Diganti
                   </span>
@@ -90,7 +90,7 @@
                     </div>
                     {% if errors.email %}
                         <span class="help-block">{{errors.email | first}}</span>
-                    {% endif %}                                
+                    {% endif %}
                 </div>
                 <div class="form-group {{ errors.password ? 'has-error' : '' }}">
                     <label>Password :</label>
@@ -103,7 +103,7 @@
                     {% if errors.password %}
                         <span class="help-block">
                             {{errors.password | first}}</span>
-                    {% endif %}                 
+                    {% endif %}
                 </div>
                 <div class="form-group {{ errors.phone ? 'has-error' : '' }}">
                     <label>Phone Number:</label>
@@ -115,7 +115,7 @@
                     </div>
                     {% if errors.phone %}
                         <span class="help-block">{{errors.phone | first}}</span>
-                    {% endif %}                                
+                    {% endif %}
                 </div>
                  <div class="col-lg-6">
                     <div class="form-group {{ errors.image ? 'has-error' : '' }}">
@@ -126,10 +126,11 @@
                             <i class="fa fa-image"></i>
                         </div>
                         <input type="file" id="file" class="form-control" name="image" value="{{login.image}}" placeholder="Your image">
+                        <input type="hidden" name="id" value="{{ login.id }}">
                     </div>
                     {% if errors.image %}
                         <span class="help-block">{{errors.image | first}}</span>
-                    {% endif %}                                
+                    {% endif %}
                 </div>
             </div>
         </div>
