--- a/views/templates/auth/register.twig
+++ b/views/templates/auth/register.twig
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Register And Login</title>
     <link rel="shortcut icon" href="(http://app.unbounce.com/favicon.ico)"/>
-    <link href="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/glowing-purple-neon-icons-social-media-logos/114150-glowing-purple-neon-icon-social-media-logos-picasa.png" rel="shortcut icon" type="image/x-icon" />  
+    <link href="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/glowing-purple-neon-icons-social-media-logos/114150-glowing-purple-neon-icon-social-media-logos-picasa.png" rel="shortcut icon" type="image/x-icon" />
         <!-- CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -33,26 +33,26 @@
 
         <!-- Top content -->
         <div class="top-content">
-            
+
             <div class="inner-bg">
                 <div class="container">
-                    
+
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
                             <h1><strong></strong> Login &amp; Register Forms</h1>
-                            <div class="description">
+                            <!-- <div class="description">
                                 <p>
-                                    This is a free responsive <strong>"login and register forms"</strong> template made with Bootstrap. 
-                                    Download it on <a href="http://azmind.com" target="_blank"><strong>AZMIND</strong></a>, 
+                                    This is a free responsive <strong>"login and register forms"</strong> template made with Bootstrap.
+                                    Download it on <a href="http://azmind.com" target="_blank"><strong>AZMIND</strong></a>,
                                     customize and use it as you like!
                                 </p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
-                    
+
                     <div class="row">
                         <div class="col-sm-5">
-                            
+
                             <div class="form-box">
                                 <div class="form-top">
                                     <div class="form-top-left">
@@ -81,12 +81,19 @@
                                             <input type="password" name="password" placeholder="Password..." class="form-password form-control" id="form-password">
                                             </div>
                                         </div>
+                                        <div class="form-group">
+                                        <div class="input-group">
+                                            <label class="radio-inline"><input type="radio" name="optlogin" value="user" checked> User</label>
+                                            <label class="radio-inline"><input type="radio" name="optlogin" value="guard"> Guardian</label>
+                                            </div>
+                                        </div>
+
                                         <button type="submit" class="btn btn-social-button btn-yahoo"><i class="fa fa-login"></i>Sign in!</button>
                                     </form>
                                 </div>
                             </div>
                         </div>
-                            <div class="social-login">
+                            <!-- <div class="social-login">
                                 <h4 style="color:white">...or login with:</h4>
                                 <br />
                                 <div class="social-login-buttons">
@@ -102,15 +109,15 @@
                                         <i class="fa fa-google-plus"></i> Google Plus
                                     </a>
                                 </div>
-                            </div>
-                            
+                            </div> -->
+
                         </div>
-                        
+
                         <div class="col-sm-1 middle-border"></div>
                         <div class="col-sm-1"></div>
-                            
+
                         <div class="col-sm-5">
-                            
+
                         <div class="form-box">
                             <div class="form-top">
                                 <div class="form-top-left">
@@ -197,22 +204,22 @@
                                             {{errors.phone | first}}</span>
                                     {% endif %}
                                     </div>
-                                
+
                                     <button type="submit" class="btn btn-social-button btn-yahoo">Sign me up!</button>
                                 </form>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
-                
+
             </div>
         </div>
-        
-    </div>
-        
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>         
+    </div>
+
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <!-- Include a polyfill for ES6 Promises (optional) for IE11 and Android browser -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -224,5 +231,5 @@
 <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-formhelpers/2.3.0/js/bootstrap-formhelpers.min.js"></script>
 </body>
-</html>  
+</html>
 {% endblock %}
