--- a/views/templates/partials/flash.twig
+++ b/views/templates/partials/flash.twig
@@ -1,49 +1,48 @@
 {% if flash.getMessage('info') %}
 
-	<center><div class="alert alert-info alert-dismissible" role="alert">
-	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  <span class="glyphicon glyphicon-bell"></span><strong> Info ! </strong> <i>Data should not be empty</i> <span class="glyphicon glyphicon-bell"></center>
+<center><div class="alert alert-info alert-dismissible" role="alert">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		<span aria-hidden="true">&times;</span></button>
+		<span class="glyphicon glyphicon-bell"></span>
+		<strong> Info ! </strong> <i>Data should not be empty</i>
+		<span class="glyphicon glyphicon-bell"></center>
+			<strong>{{ flash.getMessage('info') | first }}</strong>
+		</div>
 
-</strong>
-		{{ flash.getMessage('info') | first }}
-	  </strong>
-	</div>
+		{% endif %}
 
+		{% if flash.getMessage('error') %}
 
+		<center><div class="alert alert-danger alert-dismissible" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span></button>
+				<strong><span class="glyphicon glyphicon-remove"></span>
+					{{ flash.getMessage('error') | first }}
+					<span class="glyphicon glyphicon-remove"></span>
+				</strong>
+			</div>
+		</center>
+	{% endif %}
 
-{% endif %}
-
-
-{% if flash.getMessage('error') %}
-
-	<center><div class="alert alert-danger alert-dismissible" role="alert">
-	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  <strong><span class="glyphicon glyphicon-remove"></span>
-		{{ flash.getMessage('error') | first }}
-		<span class="glyphicon glyphicon-remove"></span>
-	  </strong> 
-	</div>
-	</center>
-{% endif %}
-
-{% if flash.getMessage('warning') %}
+	{% if flash.getMessage('warning') %}
 
 	<center> <div class="alert alert-warning alert-dismissible" role="alert">
-	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  <strong><span class="glyphicon glyphicon-warning-sign"></span><strong> Error !
-		{{ flash.getMessage('warning') | first }}
-		</strong></strong>
-	</div></center>
-{% endif %}
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			<span aria-hidden="true">&times;</span></button>
+			<strong><span class="glyphicon glyphicon-warning-sign"></span></strong>
+				 Error! {{ flash.getMessage('warning') | first }}
+		</div></center>
 
-{% if flash.getMessage('succes') %}
+	{% endif %}
+
+	{% if flash.getMessage('succes') %}
 
 	<center><div class="alert alert-success alert-dismissible" role="alert">
-	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	  <strong><span class="glyphicon glyphicon-check"></span></strong>
-		{{ flash.getMessage('succes') | first }}
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			<span aria-hidden="true">&times;</span></button>
+			<strong><span class="glyphicon glyphicon-check"></span></strong>
+			{{ flash.getMessage('succes') | first }}
 
-	<strong><span class="glyphicon glyphicon-check">
-	  </strong>
-	</div>
+			<strong><span class="glyphicon glyphicon-check"></strong>
+		</div>
 {% endif %}
