--- a/views/templates/partials/headContent.twig
+++ b/views/templates/partials/headContent.twig
@@ -2,8 +2,8 @@
 	<h1>{% block headContent %}	{% endblock %}
 		<small>Optional description</small>
 	</h1>
-	<ol class="breadcrumb">
+	<!-- <ol class="breadcrumb">
 		<li><a href="{{ base_url() }}"><i class="fa fa-dashboard"></i> Home</a></li>
-		<!-- <li class="active">Here</li> -->
-	</ol>
+		<li class="active">Herev</li>
+	</ol> -->
 </section>
