--- a/views/templates/partials/sidebarNav.twig
+++ b/views/templates/partials/sidebarNav.twig
@@ -40,8 +40,8 @@
                 </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="{{path_for('user.list.all')}}">User List</a></li>
                 <li><a href="{{path_for('user.create')}}">Create User</a></li>
+                <li><a href="{{path_for('user.list.all')}}">User List</a></li>
                 <li><a href="{{path_for('user.trash')}}">User Inactive</a></li>
             </ul>
         </li>
@@ -53,9 +53,9 @@
                 </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="{{ path_for('article-add') }}">Article add</a></li>
+                <li><a href="{{ path_for('article-add') }}">Create Article</a></li>
                 <li><a href="{{ path_for('article-list-active') }}">Article List Active</a></li>
-                <li><a href="{{ path_for('article-list-inactive') }}">Article List In-Active</a></li>
+                <li><a href="{{ path_for('article-list-inactive') }}">Article List Inactive</a></li>
             </ul>
         </li>
         <li class="treeview">
@@ -66,13 +66,13 @@
                 </span>
             </a>
             <ul class="treeview-menu">
-                <li><a href="{{ path_for('item.list')}}">Item List</a></li>
                 <li><a href="{{ path_for('item.add')}}">Create Item</a></li>
+                <li><a href="{{ path_for('item.list')}}">Item List</a></li>
                 <li><a href="{{ path_for('item.trash')}}">Trash</a></li>
             </ul>
             {% endif %}
 
-        {% if login.status == 0 %}
+        {% if login.status == 0 and guard.status == null %}
 
         <li class="treeview">
             <a href="#"><i class="fa fa-users"></i>
@@ -84,9 +84,32 @@
             <ul class="treeview-menu">
                 {% for user_group in user_group %}
 
-                <li><a href="{{ path_for('user.item.group', {('id'): user_group.group_id }) }}">{{user_group.name}}</a></li>
+                <li><a href="{{ path_for('user.item.group',
+                {('id'): user_group.group_id }) }}">{{user_group.name}}</a></li>
 
                 {% endfor %}
+            </ul>
+        </li>
+
+        {% elseif login.status == 0 and guard.status == 'guard'%}
+
+        <li class="treeview">
+            <a href="#"><i class="fa fa-users"></i>
+                <span>USER</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+            </a>
+            <ul class="treeview-menu">
+                <li><a href="{{ path_for('get.user.add', {('id'): login.id }) }}">Add User</a></li>
+
+                {% for user in guard.user %}
+
+                <li><a href="{{ path_for('user.item', {('id'): user.id }) }}">
+                {{user.name}}</a></li>
+
+                {% endfor %}
+
             </ul>
         </li>
 
@@ -94,7 +117,7 @@
 
         <li>
          <a href="{{ path_for('logout')}}"><i class="fa fa-power-off"></i>
-            <span>LOGOUT</span></a>
+            <span>LOGOUT </span></a>
         </li>
 
     </ul>
